@@ -1,3 +1,7 @@
+2020-03-12 14:44 +0000  Asterisk Development Team <asteriskteam@digium.com>
+
+	* asterisk 16.9.0 Released.
+
 2020-03-05 17:39 +0000  Asterisk Development Team <asteriskteam@digium.com>
 
 	* asterisk 16.9.0-rc1 Released.
